lots of changes

--- a/.cproject
+++ b/.cproject
@@ -39,6 +39,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Alphy/EEPROM}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Alphy/Servo}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Alphy/Arduino-SerialCommand}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Alphy/MemoryFree}&quot;"/>
 								</option>
 								<option id="it.baeyens.avreclipse.compiler.option.def.1485111403" name="Define Syms (-D)" superClass="it.baeyens.avreclipse.compiler.option.def" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="__IN_ECLIPSE__=1"/>
@@ -65,6 +66,7 @@
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Alphy/EEPROM}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Alphy/Servo}&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Alphy/Arduino-SerialCommand}&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/Alphy/MemoryFree}&quot;"/>
 								</option>
 								<option id="it.baeyens.avreclipse.cppcompiler.option.def.479432623" name="Define Syms (-D)" superClass="it.baeyens.avreclipse.cppcompiler.option.def" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="__IN_ECLIPSE__=1"/>
@@ -103,9 +105,10 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="Arduino-SerialCommand|Servo|EEPROM" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="MemoryFree|Arduino-SerialCommand|Servo|EEPROM" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 						<entry excluding="?xamples/*" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Arduino-SerialCommand"/>
 						<entry excluding="?xamples/*" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="EEPROM"/>
+						<entry excluding="?xamples/*" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="MemoryFree"/>
 						<entry excluding="?xamples/*" flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Servo"/>
 					</sourceEntries>
 				</configuration>
