--- a/.project
+++ b/.project
@@ -38,6 +38,11 @@
 			<locationURI>ArduinoLibPath/EEPROM</locationURI>
 		</link>
 		<link>
+			<name>MemoryFree</name>
+			<type>2</type>
+			<locationURI>PivateLibPath/MemoryFree</locationURI>
+		</link>
+		<link>
 			<name>Servo</name>
 			<type>2</type>
 			<locationURI>ArduinoLibPath/Servo</locationURI>
